[package]
name = "nuki-rs"
version = "0.2.1"
edition = "2021"
license = "MIT"
keywords = ["nuki", "smartlock", "smarthome"]
description = "an rust implmentation for BLE API for Nuki Smart Lock"
repository = "https://github.com/Kanksu/nuki-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.11"}
tokio = { version = "1", features = ["full"]}
anyhow = { version = "1"}
log ={ version = "0.4"}
futures ={ version = "0.3"}
machine-uid ={ version = "0.5"}
hex = { version = "0.4" }
crypto_box = { version = "0.9"}
base64 ={ version = "0.21"}
serde = { version = "1", features = ["derive"]}
serde_json = { version = "1"}
sodiumoxide = { version = "0.2"}
crc = { version = "3"}
whoami = { version = "1"}
byteorder = { version = "1"}
uuid ={ version="1" }
chrono = { version = "0.4"}

